--- a/Stock_Price_Prediction/Data_Collection_Script.ipynb
+++ b/Stock_Price_Prediction/Data_Collection_Script.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "5b4cc9e1",
+   "metadata": {},
+   "source": [
+    "## Script to Download Indian Market Stocks Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c9ce8ff6",
    "metadata": {},
    "source": [
@@ -791,13 +799,7 @@
       "[*********************100%***********************]  1 of 1 completed\n",
       "[*********************100%***********************]  1 of 1 completed\n",
       "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n",
       "[*********************100%***********************]  1 of 1 completed\n",
       "[*********************100%***********************]  1 of 1 completed\n",
       "[*********************100%***********************]  1 of 1 completed\n",
